# svp-training-data

./: .dockerignore  .gitignore  Dockerfile  exclusion_filter.py  main.py  pyproject.toml  requirements.txt  simple_duplicate_detector.py
commons/: es_params.py  models.py  relators.json  relators.py
reports/: author_report_builder.py
strategies/: common_titles.py  elastic_abstract_fuzziness_similarity_strategy.py  elastic_title_fuzziness_similarity_strategy.py  more_like_this_similarity_strategy.py  notice_semantic_similarity_strategy.py  similarity_strategy.py  synctactic_similarity_strategy.py  syntactic_similarity_strategy.py  title_semantic_similarity_strategy.py  title_syntactic_similarity_strategy.py
